# 3D_Printer

./: .gitignore  .mxproject  CMakeLists.txt  Drukarka3D.ioc  Makefile  NUCLEO-F303RE.xml  README.md  STM32F303RETx_FLASH.ld
Components/A4988_stepstick/: CMakeLists.txt
Components/A4988_stepstick/header/: A4988_stepstick.h
Components/A4988_stepstick/source/: A4988_stepstick.c
Components/A4988_stepstick/tests/: A4988_stepstick_UT.cpp  CMakeLists.txt
Components/A4988_stepstick/tests/mocks/: CMakeLists.txt  Mock_A4988_stepstick.cpp  Mock_A4988_stepstick.h
Components/A4988_stepstick/tests/stubs/: stm32f3xx_hal.h
Components/Buffered_Communication/tests/: Buffered_Communication_UT.cpp  CMakeLists.txt
Components/Buffered_Communication/tests/mocks/: CMakeLists.txt  Mock_Buffered_Communication.cpp  Mock_Buffered_Communication.h
Components/Command_Parser/: CMakeLists.txt
Components/Command_Parser/header/: Command_Parser.h
Components/Command_Parser/source/: Command_Parser.c  MotorDataRequest.c  MotorDistanceMove.c  MotorPositionEnd.c  MotorPositionMove.c  MotorPositionValueSet.c  MotorPositionZero.c  MotorSpeedMax.c  MotorSpeedSet.c  MotorStepSizeRequest.c  MotorStepSizeSet.c  SDCardProgramRun.c  U00.c  U01.c  U02.c  U03.c  U10.c  U11.c  U12.c  U13.c  U14.c  U20.c  U21.c  U22.c  U23.c  U24.c  U25.c  U26.c  U27.c  U40.c  _commands.h  forward_gcode.c  reusable.c
Components/Command_Parser/tests/: CMakeLists.txt  Command_Parser_UT.cpp
Components/Command_Parser/tests/mocks/: CMakeLists.txt  Mock_Command_Parser.cpp  Mock_Command_Parser.h
Components/Command_Parser/tests/stubs/: stubs_CommandPrivate.h
Components/EEPROM_24AA01/: CMakeLists.txt
Components/EEPROM_24AA01/header/: EEPROM_24AA01.h
Components/EEPROM_24AA01/source/: EEPROM_24AA01.c
Components/EEPROM_24AA01/tests/: CMakeLists.txt  EEPROM_24AA01_UT.cpp
Components/EEPROM_24AA01/tests/mocks/: CMakeLists.txt  Mock_EEPROM_24AA01.cpp  Mock_EEPROM_24AA01.h
Components/EEPROM_24AA01/tests/stubs/: Error_Codes.h  stm32f3xx_hal.h
Components/Error_Codes/: CMakeLists.txt
Components/Error_Codes/header/: Error_Codes.h
Components/Error_Codes/source/: Error_Codes.c
Components/Error_Codes/tests/: CMakeLists.txt  Error_Codes_UT.cpp
Components/Error_Codes/tests/mocks/: CMakeLists.txt  Mock_Error_Codes.cpp  Mock_Error_Codes.h
Components/FIFO_void/: CMakeLists.txt
Components/FIFO_void/header/: FIFO_void.h
Components/FIFO_void/source/: FIFO_void_C.c  FIFO_void_NC.c  FIFO_void_Shared.c
Components/FIFO_void/tests/: CMakeLists.txt  FIFO_void_UT.cpp
Components/FIFO_void/tests/mocks/: CMakeLists.txt  Mock_FIFO_void.cpp  Mock_FIFO_void.h
Components/FIFO_void/tests/stubs/: Error_Codes.h  stm32f3xx_hal.h
Components/GCode_Parser/: CMakeLists.txt
Components/GCode_Parser/header/: GCode_Parser.h  ProjectObjects.h
Components/GCode_Parser/source/: G1.c  G17.c  G18.c  G19.c  G2.c  G28.c  G3.c  G90.c  G91.c  G92.c  GCode_Parser.c  M104.c  M106.c  M109.c  M140.c  M190.c  _commands.h  _helpers.c  _helpers.h
Components/GCode_Parser/tests/: CMakeLists.txt  GCode_Parser_UT.cpp
Components/GCode_Parser/tests/mocks/: CMakeLists.txt  Mock_GCode_Parser.cpp  Mock_GCode_Parser.h
Components/GCode_Parser/tests/stubs/: stubs_GCodePrivate.h
Components/IOpin/: CMakeLists.txt
Components/IOpin/header/: IOpin.h
Components/IOpin/source/: IOpin.c
Components/IOpin/tests/: CMakeLists.txt  IOpin_UT.cpp
Components/IOpin/tests/mocks/: CMakeLists.txt  Mock_IOpin.cpp  Mock_IOpin.h
Components/Manager_SDcard/: CMakeLists.txt
Components/Manager_SDcard/header/: Manager_SDcard.h
Components/Manager_SDcard/source/: Manager_SDcard.c
Components/Manager_SDcard/tests/: CMakeLists.txt  Manager_SDcard_UT.cpp
Components/Manager_SDcard/tests/mocks/: CMakeLists.txt  Mock_Manager_SDcard.cpp  Mock_Manager_SDcard.h
Components/Vector_Math/tests/: CMakeLists.txt  Vector_Math_UT.cpp
Components/Vector_Math/tests/mocks/: CMakeLists.txt  Mock_Vector_Math.cpp  Mock_Vector_Math.h
Drivers/: CMakeLists.txt
Drivers/FATFS/STM32_lowlayer/Inc/: SD.h  diskio.h
Drivers/FATFS/STM32_lowlayer/Src/: SD.c  diskio.c
Drivers/FATFS/tests/mocks/: CMakeLists.txt  Mock_SD.cpp  Mock_SD.h
Drivers/FATFS/tests/stubs/: main.h
Drivers/STM32F3xx_HAL_Driver/tests/mocks/: CMakeLists.txt  Mock_HAL_Drivers.cpp  Mock_HAL_Drivers.h
Drivers/STM32F3xx_HAL_Driver/tests/stubs/: stm32f3xx_hal.h
Inc/: BT.h  EEPROM_24AA01.h  FIFO_struct.h  FIFO_void.h  Init_Manager.h  Interrupts.h  LEDdisplay_operations.h  Manager.h  ModKB4x4.h  ProjectObjects.h  ProjectTypes.h  Project_Config.h  Project_Objects.h  SD.h  ST7565.h  Settings.h  a4988_stepstick.h  interrupts.h  main.h  manager.h  managerBT.h  managerSDCard.h  menu.h  outerCommunication.h  parserCommand.h  parserGCode.h  pin_struct.h  projectDefines.h  settings.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  vectorOperations.h
Src/: BT.c  (+31 more)
UnitTests/: .gitignore  CMakeLists.txt  README.txt
UnitTests/Tests/BT/: BT_UT.cpp  CMakeLists.txt
UnitTests/Tests/EEPROM_24AA01/: CMakeLists.txt  EEPROM_24AA01_UT.cpp
UnitTests/Tests/a4988_stepstick/: CMakeLists.txt  a4988_stepstick_UT.cpp
UnitTests/Tests/a4988_stepstick/stubs/: stm32f3xx_hal.h
UnitTests/Tests/fifo/: CMakeLists.txt  FIFO_void_UT.cpp  fifo_UT.cpp
UnitTests/Tests/fifo/stubs/: stm32f3xx_hal.h
UnitTests/Tests/interrupts/: CMakeLists.txt  interrupts_UT.cpp
UnitTests/Tests/manager/: CMakeLists.txt  manager_UT.cpp
UnitTests/Tests/manager/stubs/: stm32f3xx_hal.h
UnitTests/Tests/managerBT/: CMakeLists.txt  managerBT_UT.cpp
UnitTests/Tests/managerBT/stubs/: stm32f3xx_hal.h
UnitTests/Tests/managerOuterComm/: CMakeLists.txt  managerOuterComm_UT.cpp
UnitTests/Tests/managerSDCard/: CMakeLists.txt  managerSDCard_UT.cpp
UnitTests/Tests/outerCommunication/: CMakeLists.txt  outerCommunication_UT.cpp
UnitTests/Tests/parserCommand/: CMakeLists.txt  parserCommand_UT.cpp
UnitTests/Tests/parserGCode/: CMakeLists.txt  parserGCode_UT.cpp
UnitTests/Tests/parserGCode/stubs/: stm32f3xx_hal.h
UnitTests/Tests/vectorOperations/: CMakeLists.txt  vectorOperations_UT.cpp
(+93 files in other folders)
